--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <title> My Personal Portfolio </title>
+    </head>
+    <body>
+        <header>
+            <h1> Hi, my name is Aaron, </h1>
+            <h2> and this is my personal portfolio. </h2>
+        </header>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
+        <p> I am a 17 year old student studying at Ngee Ann Polytechnic. I am currently pursuing a Diploma in Immersive Media at the school of InfoComm Technology. </p>
+        
+    </body>
 </html>
