--- a/index.html
+++ b/index.html
@@ -1,15 +1,78 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> My Personal Portfolio </title>
-    </head>
-    <body>
-        <header>
-            <h1> Hi, my name is Aaron, </h1>
-            <h2> and this is my personal portfolio. </h2>
-        </header>
+<head>
+  <title> My Personal Portfolio </title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
-        <p> I am a 17 year old student studying at Ngee Ann Polytechnic. I am currently pursuing a Diploma in Immersive Media at the school of InfoComm Technology. </p>
-        
-    </body>
-</html>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" type="text/css" href="flexbox.css"/>
+
+</head>
+  <header >
+
+    <h1 class="headerpos" >Hi, I am Aaron.</h1>
+
+    <h2 class="headerpos"><u>About Me</u></h2>
+
+    <h3 class="headerpos"> I am a 17 year old student currently pursuing a diploma in Immersive Media at Ngee Ann Polytechnic.</h3>
+
+  </header>
+
+<body class="p-pos">
+
+  <p> <img src = "https://cdn140.picsart.com/275582430040211.png?type=webp&to=min&r=1024" alt = "Thank You!" width=200px height=220px> </p>
+
+  <p1 style="font-family:Playfair Display">Thank you!</p1>
+</body>
+
+<footer>
+
+  <br>
+
+  <nav>
+  <a href="https://aarontanweiheng.wixsite.com/mysite" target="_blank">Find Out More!</a>
+
+  </nav>
+
+  <form>
+    <br>
+    <label> Name: </label>
+    <input type="text" class="stext" placeholder="Name">
+    <label> Email Address: </label>
+    <input type="text" class="stext" placeholder="Email Address">
+    <br>
+    <br>
+    <label>Queries:
+    <br>
+    <textarea placeholder="Queries"> </textarea>
+    </label>
+  </form>
+
+
+</footer>
+
+
+<style>
+
+.headerpos{
+  text-align: center;
+}
+
+.p-pos{
+  text-align: center;
+}
+
+
+nav a{
+  background-color: pink;
+  color: black;
+}
+
+</style>
+
+</html> 
