--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> My Personal Portfolio </title>
+  <title>About Me</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
   
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -10,10 +10,22 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="flexbox.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 
 </head>
   <header >
+
+    <nav>
+    <a href="https://aarontanweiheng.wixsite.com/mysite" target="_blank">My website</a>
+
+    <form>
+    <input type="submit" class="edubutton" formaction="education.html" value="Education">
+
+    <input type="submit" class="edubutton" formaction="https://aarontanweiheng.wixsite.com/mysite" target="_blank" value="My Website">
+
+    </form>
+
+    </nav>
 
     <h1 class="headerpos" >Hi, I am Aaron.</h1>
 
@@ -34,10 +46,7 @@
 
   <br>
 
-  <nav>
-  <a href="https://aarontanweiheng.wixsite.com/mysite" target="_blank">Find Out More!</a>
 
-  </nav>
 
   <form>
     <br>
