--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   <header >
 
     <nav>
-    <a href="https://aarontanweiheng.wixsite.com/mysite" target="_blank">My website</a>
 
     <form>
     <input type="submit" class="edubutton" formaction="education.html" value="Education">
+
+    <input type="submit" class="edubutton" formaction="projects.html" value="Projects">
 
     <input type="submit" class="edubutton" formaction="https://aarontanweiheng.wixsite.com/mysite" target="_blank" value="My Website">
 
