--- a/submit.html
+++ b/submit.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Submission success</title>
-
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <header>
@@ -18,7 +18,7 @@
 
 <style>
 
-body{background-image: url('https://lh3.googleusercontent.com/e4kqstL2LgXC7pUGif8uVNtAE2TjHqcUnH_tHRGXZhrhCga8ofnN9mOXK9U13_gjYlVuwceX084oUabLz2Qc3yNI-j0JShYZLjDZXYmFW42gWMVAc118Jucwfr4jWVKYoSAe56a9b-e4hY9IEFUdIDxmPL6odmKY6rlvV3GzjhOsC3O9KUUzQjsqWhIs9kpunNjmlxs0rwPRfg7xmA_lyTot6D_I7kJZA78J8DTIHdUOoEbGf5Zq2cnehtRTchaPxWWWbdvUwOmXLZOguSTq9ppLmHS6m0JcWu3_Cfv4xLePFx5ARD4Y3A8nVCCYY2jMOe4zzlZlUMuWaeQ1OdHhY1osEi6vjzK-j9WfbaefpRJRy_Nq412M0emR5FpQgRlqD9ZAbYltzpz0tZEfX5KM3HyvHTzPbJ_-j_Bxd5HSiPt-Q9T1vqopFZ9ervqdvXz0oIXe1S8eD4ojdO4GJKjMxbDxgGFJnlB0KqmCgTdD0NwgjA2ZM-M2uOEKTSj4KHIapGiaUwAltyuvEZujFSeuC-y_tx5vsPcdI1iOHp7hM9dLFaYgax461Tj7Ri-PEXvMCDNPai_TGcgvjk-wekizH9yvoFoHwZEo6JfDlG5XkDLGQ8gScfWPZgGA7E7jxClFAjqocm9zFm-CJewe7DAh8h2ZCk16ld8jg-W-ZsUhDjALFLjLmZ7S_yK4BreGLQ=w612-h816-no?authuser=0');
+body{background-image: url('Images/idasg1BG.png');
 
 }
 
