--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     
     <nav>
 
-        <input type="submit" class="edubutton" formaction="index.html" value="Return">
+      <button class="return" type=submit formaction="index.html"> RETURN </button>
 
 
     </nav>
@@ -44,9 +44,6 @@
 </body>
 
 <style>
-body{ background-image: url('Images/idasg1BG.png');
-
-}
 
 .headerpos{
   text-align: center;
@@ -57,7 +54,3 @@ body{ background-image: url('Images/idasg1BG.png');
   font-size:25px;
 }
 
-nav a{
-  background-color: pink;
-  color: black;
-}
