--- a/education.html
+++ b/education.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
+
   <link href="https://fonts.googleapis.com/css2?family=Hind&display=swap" rel="stylesheet">
 
 </head>
@@ -19,7 +20,7 @@
 
     <nav>
     
-        <input type="submit" class="edubutton" formaction="index.html" value="Return">
+      <button class="return" type=submit formaction="index.html"> RETURN </button>
 
     </nav>
 
@@ -33,9 +34,9 @@
 
 <body class="p-pos">
 
-  <p> <b><u>Primary Education:</u></b> <br> Nan Hua Primary School 2009~2015 <br>
-  <br> <b><u>Secondary Education:</u></b> <br> Maris Stella High School 2016~2019<br>
-  <br> <b><u>Tertiary Education:</u></b> <br> Ngee Ann Polytechnic 2020~2023</p>
+  <p1> <b><u>Primary Education:</u></b> <br> Nan Hua Primary School 2009~2015 <br><br> </p1>
+  <p2> <b><u>Secondary Education:</u></b> <br> Maris Stella High School 2016~2019 <br><br> </p2>
+  <p3> <b><u>Tertiary Education:</u></b> <br> Ngee Ann Polytechnic 2020~2023 <br><br> </p3>
 
   <p> <b><u>Major Examinations</u></b> <br> Primary School Leaving Examination (PSLE): 235 <br>
   <br> GCE "O" Level Examination: L1R4: 9 L1R5: 11</p>
@@ -44,8 +45,6 @@
 </body>
 
 <style>
-body{ background-image: url('Images/idasg1BG.png');
-}
 
 .headerpos{
   text-align: center;
@@ -56,7 +55,4 @@ body{ background-image: url('Images/idasg1BG.png');
   font-size: 20px;
 }
 
-nav a{
-  background-color: pink;
-  color: black;
-}
+
