--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </head>
 <header>
 
+  <div class="sidenav">
+    <a href="#aboutme_nav">About Me</a>
+    <a href="#education_nav">Education</a>
+    <a href="#projects_nav">Projects</a>
+    <a href="#website_nav">My Website</a>
+    <a href="#contact_nav">Contact Me</a>
+  </div>
+
+  <a id="aboutme_nav"></a>
   <h1 class="headerpos">Hi, I am Aaron.<br></h1>
 
   <h2 class="headerpos"><u>About Me</u></h2>
@@ -27,6 +36,8 @@
   <nav>
 
     <form>
+
+      <a id="education_nav"></a>
       <div class=container-one>
 
         <div class="expanding"></div>
@@ -36,9 +47,9 @@
           class="edubutton" formaction="education.html" value="Education">
           <button class="eduText" type = submit formaction="education.html">EDUCATION</button>
           
-
       </div>
 
+      <a id="projects_nav"></a>
       <div class=container-two>
 
         <input type="image"
@@ -46,10 +57,9 @@
           class="edubutton" formaction="projects.html" value="Projects">
           <button class="projText" type = submit formaction="projects.html">PROJECTS</button>
 
-        
-
       </div>
 
+      <a id="website_nav"></a>
       <div class=container-three>
 
         <input type="image"
@@ -75,6 +85,7 @@
 <footer>
 
   <br>
+  <a id="contact_nav"></a>
 
   <form>
     <br>
@@ -104,7 +115,7 @@
 
   .eduText {
     position: absolute;
-    top: 230px;
+    top: 225px;
     left: 82px;
     font-size: 50px;
 
@@ -112,17 +123,19 @@
 
   .projText {
     position: absolute;
-    top: 230px;
+    top: 225px;
     right: 93px;
     font-size: 50px;
   }
 
   .webText {
     position: absolute;
-    top: 230px;
+    top: 225px;
     left: 48px;
     font-size: 50px;
   }
+
+
 </style>
 
 </html>
