--- a/education.html
+++ b/education.html
@@ -34,9 +34,9 @@
 
 <body class="p-pos">
 
-  <p1> <b><u>Primary Education:</u></b> <br> Nan Hua Primary School 2009~2015 <br><br> </p1>
-  <p2> <b><u>Secondary Education:</u></b> <br> Maris Stella High School 2016~2019 <br><br> </p2>
-  <p3> <b><u>Tertiary Education:</u></b> <br> Ngee Ann Polytechnic 2020~2023 <br><br> </p3>
+  <p1> <b><u>Primary Education:</u></b> <br><br> Nan Hua Primary School 2009~2015 <br><br> </p1>
+  <p2> <b><u>Secondary Education:</u></b> <br><br> Maris Stella High School 2016~2019 <br><br> </p2>
+  <p3> <b><u>Tertiary Education:</u></b> <br><br> Ngee Ann Polytechnic 2020~2023 <br><br> </p3>
 
   <p> <b><u>Major Examinations</u></b> <br> Primary School Leaving Examination (PSLE): 235 <br>
   <br> GCE "O" Level Examination: L1R4: 9 L1R5: 11</p>
