--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
   <h3 class="headerpos"> I am a 17 year old student currently pursuing a diploma in
     Immersive Media at Ngee Ann
-    Polytechnic.</h3>
+    Polytechnic. <br> This is my personal portfolio. You can expect to find more information about me and browse through
+    <br>
+    the projects I have done so far.</h3>
 
   <nav>
 
@@ -42,30 +44,26 @@
 
         <div class="expanding"></div>
 
-        <input type="image"
-          src="Images/educationB&W.jpg"
-          class="edubutton" formaction="education.html" value="Education">
-          <button class="eduText" type = submit formaction="education.html">EDUCATION</button>
-          
+        <input type="image" src="Images/educationB&W.jpg" class="edubutton" formaction="education.html"
+          value="Education">
+        <button class="eduText" type=submit formaction="education.html">EDUCATION</button>
+
       </div>
 
       <a id="projects_nav"></a>
       <div class=container-two>
 
-        <input type="image"
-          src="Images/projectsB&W.png"
-          class="edubutton" formaction="projects.html" value="Projects">
-          <button class="projText" type = submit formaction="projects.html">PROJECTS</button>
+        <input type="image" src="Images/projectsB&W.png" class="edubutton" formaction="projects.html" value="Projects">
+        <button class="projText" type=submit formaction="projects.html">PROJECTS</button>
 
       </div>
 
       <a id="website_nav"></a>
       <div class=container-three>
 
-        <input type="image"
-          src="Images/mywebsiteB&W.png"
-          target="_blank" class="edubutton" formaction="https://aarontanweiheng.wixsite.com/mysite" value="My Website">
-          <button class="webText" type = submit formaction="https://aarontanweiheng.wixsite.com/mysite">MY WEBSITE</button>
+        <input type="image" src="Images/mywebsiteB&W.png" target="_blank" class="edubutton"
+          formaction="https://aarontanweiheng.wixsite.com/mysite" value="My Website">
+        <button class="webText" type=submit formaction="https://aarontanweiheng.wixsite.com/mysite">MY WEBSITE</button>
 
 
       </div>
@@ -76,15 +74,24 @@
 
 </header>
 
-<body class="p-pos">
+<body>
 
-  <br><br> Thank You!</p>
+  <form>
+    <p class="ty-edit"><br><br><u><b>Contact Me</b></u> </p>
+    <p class="ty-edit">aarontanweiheng@gmail.com</p>
+    <div class="igdiv">
+      <img src="Images/iglogo.png" class="iglogo" width=60px, height=auto> <button type="submit"
+        formaction="https://www.instagram.com/natorii._/" target="_blank" class="igbutton"> Instagram </button>
+
+    </div>
+  </form>
+
+  <p class=query-text> Send me a question or two!</p>
 
 </body>
 
-<footer>
+<footer class="query-pos">
 
-  <br>
   <a id="contact_nav"></a>
 
   <form>
@@ -100,7 +107,7 @@
       <textarea placeholder="Queries"> </textarea>
     </label>
     <br><br>
-    <input type="submit" class="edubutton" formaction="submit.html" value="Submit">
+    <input type="submit" class="submitbtn" formaction="submit.html" value="SUBMIT">
     <br><br>
   </form>
 
@@ -108,7 +115,6 @@
 </footer>
 
 <style>
-
   .headerpos {
     text-align: center;
   }
@@ -134,8 +140,6 @@
     left: 48px;
     font-size: 50px;
   }
-
-
 </style>
 
 </html>
