--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 
   <title> Projects </title>
 
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
@@ -13,10 +14,10 @@
 
 </head>
 
-  <header>
+<header>
 
-    <form>
-    
+  <form>
+
     <nav>
 
       <button class="return" type=submit formaction="index.html"> RETURN </button>
@@ -24,34 +25,48 @@
 
     </nav>
 
-    </form>
+  </form>
 
-    <h1 class="headerpos"> My Projects </h1>
+  <h1 class="headerpos"> My Projects </h1>
 
-    <br>
-    
-  </header>
+  <br>
 
-<body class="p-pos">
+</header>
 
-    <p><u> School Projects </u><br><br> Logo Design: <br> <img src = "Images/LogoInfograpic.PNG" height=200px width=auto> 
-    <br><br> Splash Screen Design: <br> <img src = "Images/DPAsg2Final.png" height=auto width=216px> 
-    <br><br> Infographics Design: <br> <img src="Images/DP Assignment 3.png" width=216px> 
-    <br><br> Vector Art: <br> <img src="Images/vectorv3.PNG" width=216px></p>
+<body>
 
-    <p><u> Personal Projects </u><br><br> <img src="Images/personalproj1.jpg" width=216px>
-    <br><br> <img src="Images/personalproj2.jpg" width=216px></p>
+  <p class="image-edit"><u> School Projects </u><br> </p>
+  <p class="image-edit"><br><br> <img src="Images/LogoInfograpic.PNG" height=200px width=auto> <br>Logo Design: <br>
+  </p>
+  <p class="proj-edit">This is my re-designed Spotify logo project.</p>
+
+
+  <br><br>
+  <p class="image-edit"> <br><br> <img src="Images/DPAsg2Final.png" height=auto width=216px class="proj-edit"> <br>
+    Splash Screen Design: </p>
+
+  <p class="proj-edit">This is my original splash screen design for Spotify. </p>
+
+  <br><br>
+  <p class="image-edit"> <br><br> <img src="Images/DP Assignment 3.png" width=216px class="proj-edit"> <br> Infographics
+    Design: </p>
+  <p class="proj-edit">This is an infogaphics page designed for Spotify.</p>
+
+  <br><br>
+  <p class="image-edit"> <br><br> <img src="Images/vectorv3.PNG" width=216px class="proj-edit"> <br> Vector Art: </p>
+  <p class="proj-edit">These are some vector drawings for different pastries.</p>
+
+  <br>
+  <p class="image-edit"><u> Personal Projects </u><br><br><br> </p>
+  <p class="image-edit"> <img src="Images/personalproj1.jpg" width=216px class="proj-edit"> <br></p>
+  <p class="proj-edit">This is a basic sketch with some inking.</p>
+
+  <br><br>
+  <p class="image-edit"> <img src="Images/personalproj2.jpg" width=216px class="proj-edit"> <br> </p>
+  <p class="proj-edit">This is a full colour drawing using colour pencils only and inking. </p>
 </body>
 
 <style>
-
-.headerpos{
-  text-align: center;
-}
-
-.p-pos{
-  text-align: center;
-  font-size:25px;
-}
-
-
+  .headerpos {
+    text-align: center;
+  }
