--- a/education.html
+++ b/education.html
@@ -37,6 +37,9 @@
 
   <p1> <b><u>Primary Education:</u></b> <br><br> Nan Hua Primary School 2009~2015 <br><br> </p1>
   <p2> <b><u>Secondary Education:</u></b> <br><br> Maris Stella High School 2016~2019 <br><br> </p2>
+  <div>
+    <img src="Images/mshspic.jpg" width="450px" height=auto> <br><br>
+  </div>
   <p3> <b><u>Tertiary Education:</u></b> <br><br> Ngee Ann Polytechnic 2020~2023 <br><br> </p3>
 
   <p4> <b><u>Major Examinations</u></b> <br><br> Primary School Leaving Examination (PSLE): 235 <br>
@@ -44,6 +47,13 @@
 
     <p5> <b><u>Languages:</u></b> <br> English <br> Chinese <br> Korean (Reading) <br><br> <u><b> Skills:</u></b> <br>
       Adobe Photoshop <br> Adobe Illustrator <br> Maya <br> Traditional Drawing</p>
+
+      <p6> <b><u>Co-curricular Activities</b></u> <br>Robotics<br>Badminton<br>NPCC<br>NP Voices Academy<br> Amphibi
+        Studio<br><br></p6>
+      <div>
+        <img src="Images/npccpic.jpg" width="450px" height=auto>
+        <p> Pass Out Parade for NPCC</p>
+      </div>
 </body>
 
 <style>
