--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>About Me</title>
+
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -78,15 +81,19 @@
 
   <form>
     <p class="ty-edit"><br><br><u><b>Contact Me</b></u> </p>
-    <p class="ty-edit">aarontanweiheng@gmail.com</p>
+    <p class="mail-edit">aarontanweiheng@gmail.com</p>
     <div class="igdiv">
       <img src="Images/iglogo.png" class="iglogo" width=60px, height=auto> <button type="submit"
         formaction="https://www.instagram.com/natorii._/" target="_blank" class="igbutton"> Instagram </button>
-
+    </div>
+    <div class="igdiv">
+      <img src="Images/linkedinlogo .jpg" class=iglogo" width=70px height=auto> <button type="submit"
+        formaction="https://www.linkedin.com/in/aaron-tan-83ba241a7/" target="_blank" class="igbutton"> LinkedIN
+      </button>
     </div>
   </form>
 
-  <p class=query-text> Send me a question or two!</p>
+  <p class=query-text> Send me a question!</p>
 
 </body>
 
@@ -139,7 +146,9 @@
     top: 225px;
     left: 48px;
     font-size: 50px;
+    flex-direction: row;
   }
+
 </style>
 
 </html>
