--- a/education.html
+++ b/education.html
@@ -7,11 +7,15 @@
 
   <link rel="stylesheet" type="text/css" href="style.css" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> <!-- Links for fonts -->
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
 
   <link href="https://fonts.googleapis.com/css2?family=Hind&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet"> <!-- Links for fonts -->
 
 </head>
 
@@ -21,7 +25,7 @@
 
     <nav>
 
-      <button class="return" type=submit formaction="index.html"> RETURN </button>
+      <button class="return" type=submit formaction="index.html"> RETURN </button> <!-- button to return to main menu -->
 
     </nav>
 
@@ -35,24 +39,30 @@
 
 <body class="p-pos">
 
-  <p1> <b><u>Primary Education:</u></b> <br><br> Nan Hua Primary School 2009~2015 <br><br> </p1>
-  <p2> <b><u>Secondary Education:</u></b> <br><br> Maris Stella High School 2016~2019 <br><br> </p2>
+  <p1> <b><u>Primary Education:</u></b> <br><br> Nan Hua Primary School 2010~2015 <br><br><br> </p1>
+  <p2> <b><u>Secondary Education:</u></b> <br><br> Maris Stella High School 2016~2019 <br><br><br> </p2>
   <div>
-    <img src="Images/mshspic.jpg" width="450px" height=auto> <br><br>
+    <img src="Images/mshspic.jpg" width="450px" height=auto> <br><br> 
   </div>
-  <p3> <b><u>Tertiary Education:</u></b> <br><br> Ngee Ann Polytechnic 2020~2023 <br><br> </p3>
+  <p3> <b><u>Tertiary Education:</u></b> <br><br> Ngee Ann Polytechnic 2020~2023 <br><br><br> </p3>
+
+  <p7> <b><u>Academic Awards</u></b> <br><br> 2014: <br> Good Progress Award & CCA Full Prism Award (Outstanding performance in CCAs) <br><br>
+  2015: <br> EAGLES Award <br><br> 2019: <br> Good Progress Award & Edusave Award <br><br><br></p7>
+
+  <p8> <b><u>Co-curricular Awards</u></b> <br><br> 2014: <br> National Junior Robotics Competition <br> Best Robot Design <br> Best Robot Program <br> Overall Champion <br><br>
+  2019: <br> NPCC 20th consecutive gold award for Unit Overall Profeciency Award<br><br><br> </p8>
 
   <p4> <b><u>Major Examinations</u></b> <br><br> Primary School Leaving Examination (PSLE): 235 <br>
-    <br> GCE "O" Level Examination: L1R4: 9 L1R5: 11</p>
+    <br> GCE "O" Level Examination: L1R4: 9 L1R5: 11 <br><br></p>
 
-    <p5> <b><u>Languages:</u></b> <br> English <br> Chinese <br> Korean (Reading) <br><br> <u><b> Skills:</u></b> <br>
-      Adobe Photoshop <br> Adobe Illustrator <br> Maya <br> Traditional Drawing</p>
+    <p5> <b><u>Languages:</u></b> <br><br> English <br> Chinese <br> Korean (Reading) <br><br><br> <u><b> Skills:</u></b> <br><br>
+      Adobe Photoshop <br> Adobe Illustrator <br> Maya <br> Traditional Drawing<br><br></p>
 
-      <p6> <b><u>Co-curricular Activities</b></u> <br>Robotics<br>Badminton<br>NPCC<br>NP Voices Academy<br> Amphibi
+      <p6> <b><u>Co-curricular Activities</b></u> <br><br>Robotics<br>Badminton<br>NPCC<br>NP Voices Academy<br> Amphibi
         Studio<br><br></p6>
       <div>
-        <img src="Images/npccpic.jpg" width="450px" height=auto>
-        <p> Pass Out Parade for NPCC</p>
+        <img src="Images/npccpic.jpg" width="450px" height=auto class="npText">
+        <p> Passing Out Parade (Step Down) for NPCC</p>
       </div>
 </body>
 
@@ -66,3 +76,21 @@
     font-size: 20px;
     font-family: Montserrat;
   }
+
+  .return{
+    font-family: 'Comfortaa', cursive;
+    border: none;
+    background: none;
+    position: fixed;
+    top: 3%;
+    left: 20px;
+    width: 120px;
+    transform: translateY(-50%);
+    font-size: 25px;
+  }
+
+  .npText{
+    font-family: 'Comfortaa', cursive;
+  }
+
+  </style>
