--- a/projects.html
+++ b/projects.html
@@ -7,10 +7,13 @@
 
   <link rel="stylesheet" type="text/css" href="style.css" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> <!-- Links for fonts -->
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Hind&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet"> <!-- Links for fonts -->
 
 </head>
 
@@ -20,7 +23,7 @@
 
     <nav>
 
-      <button class="return" type=submit formaction="index.html"> RETURN </button>
+      <button class="return" type=submit formaction="index.html"> RETURN </button> <!-- button to return to main menu -->
 
 
     </nav>
@@ -70,3 +73,17 @@
   .headerpos {
     text-align: center;
   }
+
+  .return{
+    font-family: 'Comfortaa', cursive;
+    border: none;
+    background: none;
+    position: fixed;
+    top: 3%;
+    left: 20px;
+    width: 120px;
+    transform: translateY(-50%);
+    font-size: 25px;
+  }
+
+  </style>
